
<resources>
    <string name="app_name">GoodFood</string>

    <string name="menu_title">Menu</string>
    <string name="order_title">Order</string>
    <string name="order_summary_title">Invoice Summary</string>

    <string name="garden_delight">Garden Delight</string>
    <string name="spicy_pepperoni">Spicy Pepperoni</string>
    <string name="bacon_tomato">Bacon Tomato</string>
    <string name="gourmet_veggie">Gourmet Veggie</string>
    <string name="grilled_chicken">Grilled Chicken</string>
    <string name="pineapple_supreme">Pineapple Supreme</string>

    <string name="Customizations">Customize</string>
    <string name="crust_choices">Crust Choices</string>
    <string name="sauce_choices">Sauce Choices</string>
    <string name="quantity">Quantity</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="initial_cost">$0.00</string>
    <string name="initial_quantity_value">0</string>
    <string name="food_size">Size</string>
    <string name="food_size_personal">Personal ($5)</string>
    <string name="food_size_medium">Medium ($6)</string>
    <string name="food_size_large">Large ($7)</string>
    <string name="crust_type_none">None</string>
    <string name="crust_type_original">Original Crust</string>
    <string name="crust_type_pan">Pan Crust</string>
    <string name="crust_type_stuffed">Stuffed Crust</string>
    <string name="sauce_type_zesty">Zesty Red Sauce</string>
    <string name="sauce_type_bbq">BBQ Sauce</string>
    <string name="sauce_type_pesto">Pesto Sauce</string>
    <string name="sauce_type_none">None</string>

    <string name="order_summary"/>
    <string name="total">Total</string>
    <string name="summary_pizza_label">Pizza Type</string>
    <string name="summary_size_label">Size</string>
    <string name="summary_crust_label">Crust Choice</string>
    <string name="summary_sauce_label">Sauce Choice</string>
    <string name="summary_total_label">Order Total</string>
    <string name="summary_quantity_label">Quantity</string>

    <string name="summary_email_prompt">Save or Share Invoice for the order to be picked up by a family/friend</string>
    <string name="send_email">Share Invoice</string>
    <string name="order_summary_email_subject">Hot Pizza Prepared from GoodFood</string>
    <string name="email_message">Pizza Order for Pickup</string>

    <string name="done_msg">Order placed successfully!</string>
    <string name="loading_img">Loading images</string>

    <string-array name="food_size_array">
        <item>Personal (5$)</item>
        <item>Medium (6$)</item>
        <item>Large ($7)</item>
    </string-array>

    <string-array name="crustType_array">
        <item>None</item>
        <item>Original Crust</item>
        <item>Pan Crust</item>
        <item>Stuffed Crust</item>
    </string-array>

    <string-array name="sauce_array">
        <item>None</item>
        <item>Zesty Red Sauce</item>
        <item>BBQ Sauce</item>
        <item>Pesto Sauce</item>
    </string-array>
</resources>