<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<android.support.v7.widget.Toolbar
    android:id="@+id/order_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ToolbarTheme"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout
        android:id="@+id/activity_food_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_food_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_name_text_view"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <TextView
            style="@style/FormTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap"
            android:paddingBottom="@dimen/default_gap"
            android:text="@string/Customizations" />


        <RelativeLayout
            android:id="@+id/sizeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/sizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_size" />

            <Spinner
                android:id="@+id/size_spinner"
                style="@style/FormTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sizeLabel"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:drawSelectorOnTop="true" />

        </RelativeLayout>

        <View style="@style/Divider"/>

        <RelativeLayout
            android:id="@+id/crustLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/crustChoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crust_choices" />

            <Spinner
                android:id="@+id/crustType_spinner"
                style="@style/FormTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crustChoices"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:drawSelectorOnTop="true" />

        </RelativeLayout>

        <View style="@style/Divider"/>

        <RelativeLayout
            android:id="@+id/sauceLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/sauceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce_choices" />

            <Spinner
                android:id="@+id/sauce_spinner"
                style="@style/FormTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sauceLabel"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:drawSelectorOnTop="true" />

        </RelativeLayout>

        <View style="@style/Divider"/>

        <RelativeLayout
            android:id="@+id/quantityLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap">

            <TextView
                android:id="@+id/quantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:onClick="decrement"
                    android:textSize="18sp"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/initial_quantity_value"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:onClick="increment"
                    android:textSize="22sp"
                    android:text="+" />
            </LinearLayout>

        </RelativeLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_gap"
            android:paddingBottom="@dimen/default_gap"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total"
                style="@style/FormTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total" />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/FormTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <Button
            android:id="@+id/place_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="placeOrder"
            android:text="@string/place_order" />

    </LinearLayout>

</LinearLayout>

</ScrollView>